<?xml version="1.0"?>
<package format="3">
  <name>example_action</name>
  <version>0.0.1</version>
  <description>Example package with action server and client</description>
  <maintainer email="jodle001@me.com">Jacob Odle</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>action_msgs</depend>
  <depend>example_action_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
