<?xml version="1.0"?>
<package format="3">
  <name>example_action_interfaces</name>
  <version>0.0.1</version>
  <description>A package for example action interfaces.</description>

  <maintainer email="jodle@optimaxsi.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>action_msgs</build_depend>
  <exec_depend>action_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
